// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / With Custom Cells Bold Cells 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c20 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c7 {
  width: inherit;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c13 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c16 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c2 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:nth-last-child(2) {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:nth-last-child(2) {
  padding-right: 0;
}

.c3 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c5 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c0 {
  position: relative;
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c11 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Column 1
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Column 2
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Column 3
        </span>
      </div>
    </div>
    <div
      className="c10 c5 c11"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          123
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c15 c9"
        >
          123
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c14 c9"
        >
          123
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c16 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c17 c18"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c19"
        >
          <svg
            aria-hidden="true"
            className="c20"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Custom Cells Custom Cells 1`] = `
.c24 {
  color: #282823;
}

.c25 {
  height: 16px;
  width: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 0 150px;
  -ms-flex: 0 0 150px;
  flex: 0 0 150px;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c30 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c27 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c27,
.c27[type='button'],
.c27[type='reset'],
.c27[type='submit'] {
  -webkit-appearance: button;
}

.c27::-moz-focus-inner,
.c27[type='button']::-moz-focus-inner,
.c27[type='reset']::-moz-focus-inner,
.c27[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c27:-moz-focusring,
.c27[type='button']:-moz-focusring,
.c27[type='reset']:-moz-focusring,
.c27[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E6E;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E6E;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c29 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c33 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c28 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c7 {
  width: inherit;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c22 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c26 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c20 {
  display: none;
  margin-left: -4px;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c2 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:nth-last-child(2) {
  padding-right: 0;
}

.c21 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-left: 0px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c21:hover {
  background: #F5F5F5;
}

.c21 > *:first-child {
  padding-left: 0;
}

.c21 > *:nth-last-child(2) {
  padding-right: 0;
}

.c3 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c31 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c17 {
  margin-left: 4px;
}

.c11 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c5 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c32 {
  overflow: hidden;
  padding-top: 5px !important;
  padding-bottom: 5px;
}

.c0 {
  position: relative;
}

.c13 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1600px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c19 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:976px) {
  .c20 {
    -webkit-flex: 0 40px;
    -ms-flex: 0 40px;
    flex: 0 40px;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Date
        </span>
      </div>
    </div>
    <div
      aria-sort="none"
      className="c10 c5"
      role="columnheader"
    >
      <a
        className="c11"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <div
          className="c12 c13"
        >
          <div
            className="c14 c15"
          >
            <div
              className="c6 c7"
            >
              <span
                className="Typography__Span-sc-10mju41-0 c8 c9"
              >
                Transferable quantity
              </span>
            </div>
          </div>
          <div
            className="c14"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c8 c9"
            >
              USD
            </span>
          </div>
          <div
            className="c14"
          >
            <svg
              aria-hidden="true"
              className="c16 c17"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Country
        </span>
      </div>
    </div>
    <div
      className="c18 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        >
          Percentage
        </span>
      </div>
    </div>
    <div
      className="c19 c5 c20"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8 c9"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c21"
    role="row"
  >
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          <span
            className="c24"
          >
            <time>
              7/10/2020, 12:53
            </time>
          </span>
        </span>
      </div>
    </div>
    <div
      className="c10 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          
          300
        </span>
      </div>
    </div>
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          <svg
            className="c25"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 14 14"
          >
            <g
              clipPath="url(#clip0_1042_410)"
            >
              <path
                d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
                fill="#FFCF00"
              />
              <path
                d="M5.4783 6.087h8.4624C13.4933 2.6524 10.5565 0 7 0a7.0246 7.0246 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.354 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0592c.2949 2.2635 1.6709 4.1871 3.593 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9407-6.087H5.4783Z"
                fill="#2650BF"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_1042_410"
              >
                <path
                  d="M0 0h14v14H0z"
                  fill="#fff"
                />
              </clipPath>
            </defs>
            <title>
              Sweden
            </title>
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c18 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          
          75
          %
        </span>
      </div>
    </div>
    <div
      className="c19 c22 c26 c20"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c27 c28"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c29"
        >
          <svg
            aria-hidden="true"
            className="c30"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c21"
    role="row"
  >
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          <span
            className="c24"
          >
            <time>
              7/10/2020, 12:53
            </time>
          </span>
        </span>
      </div>
    </div>
    <div
      className="c10 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          
          100
        </span>
      </div>
    </div>
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          <svg
            className="c25"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 14 14"
          >
            <g
              clipPath="url(#clip0_1042_339)"
            >
              <path
                d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
                fill="#F5F5F5"
              />
              <path
                d="M.241 8.8261c.4051 1.5028 1.2977 2.8053 2.498 3.7276V8.8261H.241ZM6.3912 13.9734C6.592 13.9906 6.7948 14 7 14c3.2342 0 5.9556-2.1935 6.7589-5.1739H6.3912v5.1473ZM13.7588 5.1739C12.9555 2.1935 10.2341 0 6.9999 0c-.2051 0-.408.0094-.6087.0266V5.174h7.3676ZM2.739 1.4464C1.5388 2.3687.6462 3.671.241 5.1738h2.498V1.4464Z"
                fill="#CC3929"
              />
              <path
                d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
                fill="#2650BF"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_1042_339"
              >
                <path
                  d="M0 0h14v14H0z"
                  fill="#fff"
                />
              </clipPath>
            </defs>
            <title>
              Norway
            </title>
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c18 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c23 c9"
        >
          
          25
          %
        </span>
      </div>
    </div>
    <div
      className="c19 c22 c26 c20"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="c27 c28"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c29"
        >
          <svg
            aria-hidden="true"
            className="c30"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M0 .59l4 4 4-4v2.828l-4 4-4-4V.59z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c2 c31"
    role="row"
  >
    <div
      className="c4 c32"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c33 c9"
        />
      </div>
    </div>
    <div
      className="c10 c32"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c33 c9"
        >
          
          400
        </span>
      </div>
    </div>
    <div
      className="c4 c32"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c33 c9"
        />
      </div>
    </div>
    <div
      className="c18 c32"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c33 c9"
        >
          
          25
          %
        </span>
      </div>
    </div>
    <div
      className="c19 c32 c20"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c33 c9"
        />
      </div>
    </div>
  </div>
</div>
`;
